--- a/container.tests/Dockerfile
+++ b/container.tests/Dockerfile
@@ -1,9 +1,6 @@
 # Test Dockerfile to verify PyAV can bind to the LGPL FFmpeg build
 FROM python:3.14-slim-bookworm
 
-# Copy FFmpeg installation from ffmpeg stage
-COPY --from=python-ffmpeg-lgpl:latest /usr/local/ffmpeg /usr/local/ffmpeg
-
 # Add FFmpeg to PATH and library path
 ENV PATH="/usr/local/ffmpeg/bin:${PATH}"
 ENV LD_LIBRARY_PATH="/usr/local/ffmpeg/lib:/usr/local/lib"
@@ -23,9 +20,11 @@ RUN apt-get update && apt-get install -y \
 # Install PyAV and its build dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
-    python3-dev \
     pkg-config \
     && rm -rf /var/lib/apt/lists/*
+
+# Copy FFmpeg installation from ffmpeg binaries image
+COPY --from=python-ffmpeg-lgpl:latest /usr/local/ffmpeg /usr/local/ffmpeg
 
 # Install PyAV
 RUN pip install --no-binary av av
