Rename from python-ffmpeg-lgpl to ffmpeg-lgpl

--- a/python.tests/Dockerfile
+++ b/python.tests/Dockerfile
@@ -20,7 +20,7 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy FFmpeg installation from ffmpeg binaries image
-COPY --from=python-ffmpeg-lgpl:latest /usr/local/ffmpeg /usr/local/ffmpeg
+COPY --from=ffmpeg-lgpl:latest /usr/local/ffmpeg /usr/local/ffmpeg
 
 # Install PyAV
 RUN pip install --no-binary av av
