--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,7 +3,7 @@ name: Release
 on:
   push:
     tags:
-      - '[0-9]+.[0-9]+.[0-9]+-lgpl'
+      - 'v[0-9]+.[0-9]+.[0-9]+-lgpl'
 
 env:
   REGISTRY: ghcr.io
