--- a/ffmpeg/Dockerfile
+++ b/ffmpeg/Dockerfile
@@ -2,20 +2,21 @@
 FROM debian:bookworm-slim AS builder
 
 # Install build dependencies
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
     xz-utils \
     build-essential \
     pkg-config \
     yasm \
     nasm \
+    ca-certificates \
+    libssl-dev \
     libvpx-dev \
     libmp3lame-dev \
     libopus-dev \
     libvorbis-dev \
     libass-dev \
     libtheora-dev \
-    libssl-dev \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /build
@@ -37,14 +38,14 @@ RUN ./configure \
     --disable-nonfree \
     --enable-shared \
     --enable-pic \
-    --prefix=/usr/local/ffmpeg \
+    --enable-openssl \
     --enable-libvpx \
     --enable-libmp3lame \
     --enable-libopus \
     --enable-libvorbis \
     --enable-libass \
     --enable-libtheora \
-    --enable-openssl \
+    --prefix=/usr/local/ffmpeg \
     --extra-version="lgpl"
 
 # Build FFmpeg with LGPL configuration
