--- a/python.tests/Dockerfile
+++ b/python.tests/Dockerfile
@@ -7,9 +7,12 @@ ENV LD_LIBRARY_PATH="/usr/local/ffmpeg/lib:/usr/local/lib"
 ENV PKG_CONFIG_PATH="/usr/local/ffmpeg/lib/pkgconfig:/usr/local/lib/pkgconfig"
 
 # Install runtime dependencies for FFmpeg and build dependencies for PyAV
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc \
+    build-essential \
     pkg-config \
+    ca-certificates \
+    libssl3 \
     libvpx7 \
     libmp3lame0 \
     libopus0 \
@@ -17,7 +20,6 @@ RUN apt-get update && apt-get install -y \
     libvorbisenc2 \
     libass9 \
     libtheora0 \
-    libssl3 \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy FFmpeg installation from ffmpeg binaries image
